[gd_scene load_steps=5 format=3 uid="uid://invui001"]

[ext_resource type="Script" path="res://scenes/ui/inventory/inventory_ui.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://helditem001" path="res://scenes/ui/inventory/held_item.tscn" id="2_held"]
[ext_resource type="PackedScene" uid="uid://ctxmenu001" path="res://scenes/ui/inventory/context_menu.tscn" id="3_ctx"]
[ext_resource type="PackedScene" uid="uid://splitdlg001" path="res://scenes/ui/inventory/split_dialog.tscn" id="4_split"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -220.0
offset_right = 200.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 5

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="HeldItem" parent="." instance=ExtResource("2_held")]
layout_mode = 1

[node name="ContextMenu" parent="." instance=ExtResource("3_ctx")]
visible = false
layout_mode = 1

[node name="SplitDialog" parent="." instance=ExtResource("4_split")]
visible = false
layout_mode = 1
